--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -86,7 +86,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/Harsh.jpg");
+      background: url("../img/harshimg.jpg");
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
