--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
 
@@ -65,23 +65,27 @@
     background: darken($primary-color, 5);
     list-style: none;
     transform: translate3d(0, -100%, 0);
+    transition: all 0.6s ease-out;
     @include easeOut;
 
     &.show {
       //Slide in from top
       transform: translate3d(0, 0, 0);
+      transition: all 0.6s ease-out;
     }
   }
 
   //Branding side
   &-branding {
     background: $primary-color;
-    transform: translate(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    transition: all 0.6s ease-out;
     @include easeOut;
 
     &.show {
       //Slide in from bottom
       transform: translate3d(0, 0, 0);
+      transition: all 0.6s ease-out;
     }
     .portrait {
       width: 250px;
@@ -93,11 +97,13 @@
   }
   .nav-item {
     transform: translate3d(600px, 0, 0);
+    transition: all 0.6s ease-out;
     @include easeOut;
 
     &.show {
       // Slide in from right
       transform: translate3d(0, 0, 0);
+      transition: all 0.6s ease-out;
     }
     &.current > a {
       color: $secondary-color;
